<resources>
    <string name="app_name">dpmac</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_solicitud_registrar">Registrar Solicitud</string>
    <string name="menu_solicitud_actualizar">Actualizar Solicitud</string>
    <string name="menu_solicitud_ver">Ver Solicitud</string>
    <string name="menu_solicitudes_pendientes">Sol. Pendientes</string>
    <string name="menu_solicitudes_en_revision">Sol. En Revisión</string>
    <string name="menu_solicitudes_aprobadas">Sol. Aprobadas</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_oportunidades">Oportunidades de Inversión</string>
    <string name="menu_oportunidadesmapa">Mapa de Oportunidades</string>
    <string name="menu_oportunidad_invertir">Invertir</string>
    <string name="menu_inversiones">Mis Inversiones</string>
    <string name="menu_inversiones_en_cobranza">Mis Inv. en Cobranza</string>
    <string name="menu_inversiones_terminadas">Mis Inv. en Terminadas</string>
    <string name="menu_inversion_ver">Ver Inversión</string>
    <string name="menu_usuario_actualizar">Modificar Perfil</string>
    <string name="menu_logout">Cerrar Sesión</string>

    <string name="card_titulo_riesgo">Riesgo:</string>
    <string name="card_titulo_fecvigenciafin">Fecha de cierre:</string>
    <string name="card_titulo_tasacion">Valorización:</string>
    <string name="card_titulo_ratio">Ratio: </string>
    <string name="card_titulo_disponible">Disponible:</string>
    <string name="card_titulo_rendimiento">Rendimiento / TIR:</string>
    <string name="card_titulo_plazo">Plazo (meses): </string>
    <string name="card_titulo_impganancia">Ganancia Estimada</string>

    <string name="cr_general_pordefinir">Por definir</string>

    <string name="cr_oportunidadtipo_casa">Casa</string>
    <string name="cr_oportunidadtipo_departamento">Departamento</string>
    <string name="cr_oportunidadtipo_lote">Lote</string>

    <string name="cr_perfilriesgo_pendiente">PENDIENTE</string>
    <string name="cr_perfilriesgo_bajo">BAJO</string>
    <string name="cr_perfilriesgo_moderado">MODERADO</string>
    <string name="cr_perfilriesgo_medio">MEDIO</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_menu_solicitante">MenuSolicitanteActivity</string>
    <string name="title_activity_menu_inversionista">MenuInversionistaActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>