<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_solicitud_registrar"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_solicitud_registrar" />
        <item
            android:id="@+id/nav_solicitudes_pendientes"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_solicitudes_pendientes" />
        <item
            android:id="@+id/nav_solicitudes_enrevision"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_solicitudes_en_revision" />
        <item
            android:id="@+id/nav_solicitudes_aprobadas"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_solicitudes_aprobadas" />
    </group>
    <item android:title="Opciones Generales">
        <menu>
            <item
                android:id="@+id/nav_usuario_actualizar"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_usuario_actualizar" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_logout" />
        </menu>
    </item>
</menu>