<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_inversionista"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.jtrujillo.dpmac.ui.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_oportunidades"
        android:name="com.jtrujillo.dpmac.ui.oportunidades.OportunidadesFragment"
        android:label="@string/menu_oportunidades"
        tools:layout="@layout/fragment_oportunidades" />

    <fragment
        android:id="@+id/nav_oportunidadesmapa"
        android:name="com.jtrujillo.dpmac.ui.oportunidades.OportunidadesmapaFragment"
        android:label="@string/menu_oportunidades"
        tools:layout="@layout/fragment_oportunidadesmapa" />

    <fragment
        android:id="@+id/nav_oportunidad_invertir"
        android:name="com.jtrujillo.dpmac.ui.oportunidades.OportunidadInvertirFragment"
        android:label="@string/menu_oportunidad_invertir"
        tools:layout="@layout/fragment_oportunidad_invertir" />

    <fragment
        android:id="@+id/nav_inversiones"
        android:name="com.jtrujillo.dpmac.ui.inversiones.InversionesFragment"
        android:label="@string/menu_inversiones"
        tools:layout="@layout/fragment_inversiones" />

    <fragment
        android:id="@+id/nav_inversiones_encobranza"
        android:name="com.jtrujillo.dpmac.ui.inversiones.InversionesEncobranzaFragment"
        android:label="@string/menu_inversiones_en_cobranza"
        tools:layout="@layout/fragment_inversiones_encobranza" />

    <fragment
        android:id="@+id/nav_inversiones_terminadas"
        android:name="com.jtrujillo.dpmac.ui.inversiones.InversionesTerminadasFragment"
        android:label="@string/menu_inversiones_terminadas"
        tools:layout="@layout/fragment_inversiones_terminadas" />

    <fragment
        android:id="@+id/nav_inversion_ver"
        android:name="com.jtrujillo.dpmac.ui.inversiones.InversionVerFragment"
        android:label="@string/menu_inversion_ver"
        tools:layout="@layout/fragment_inversion_ver" />

    <fragment
        android:id="@+id/nav_inversion_ver2"
        android:name="com.jtrujillo.dpmac.ui.inversiones.InversionVer2Fragment"
        android:label="@string/menu_inversion_ver"
        tools:layout="@layout/fragment_inversion_ver2" />

    <fragment
        android:id="@+id/nav_inversion_ver3"
        android:name="com.jtrujillo.dpmac.ui.inversiones.InversionVer3Fragment"
        android:label="@string/menu_inversion_ver"
        tools:layout="@layout/fragment_inversion_ver3" />

    <fragment
        android:id="@+id/nav_usuario_actualizar_inversionista"
        android:name="com.jtrujillo.dpmac.ui.usuarios.UsuarioActualizarInversionistaFragment"
        android:label="@string/menu_usuario_actualizar"
        tools:layout="@layout/fragment_usuario_actualizar_inversionista" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.jtrujillo.dpmac.ui.usuarios.UsuarioLogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_usuario_logout" />
</navigation>