<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_solicitante"
    app:startDestination="@+id/nav_solicitudes_pendientes">

    <fragment
        android:id="@+id/nav_solicitud_registrar"
        android:name="com.jtrujillo.dpmac.ui.solicitudregistrar.SolicitudRegistrarFragment"
        android:label="@string/menu_solicitud_registrar"
        tools:layout="@layout/fragment_solicitud_registrar" />

    <fragment
        android:id="@+id/nav_solicitudes_pendientes"
        android:name="com.jtrujillo.dpmac.ui.solicitudespendientes.SolicitudesPendientesFragment"
        android:label="@string/menu_solicitudes_pendientes"
        tools:layout="@layout/fragment_solicitudes_pendientes" />

    <fragment
        android:id="@+id/nav_solicitudes_enrevision"
        android:name="com.jtrujillo.dpmac.ui.solicitudesenrevision.SolicitudesEnrevisionFragment"
        android:label="@string/menu_solicitudes_en_revision"
        tools:layout="@layout/fragment_solicitudes_enrevision" />

    <fragment
        android:id="@+id/nav_solicitudes_aprobadas"
        android:name="com.jtrujillo.dpmac.ui.solicitudesaprobadas.SolicitudesAprobadasFragment"
        android:label="@string/menu_solicitudes_aprobadas"
        tools:layout="@layout/fragment_solicitudes_aprobadas" />

    <fragment
        android:id="@+id/nav_usuario_actualizar"
        android:name="com.jtrujillo.dpmac.UsuarioLogoutFragment"
        android:label="@string/menu_usuario_actualizar"
        tools:layout="@layout/fragment_usuario_logout" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.jtrujillo.dpmac.UsuarioLogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_usuario_logout" />
</navigation>