<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.inversiones.InversionVer2Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <ImageView
            android:id="@+id/imgNomFoto2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/img_casa03" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtNomOportunidadTipo2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cr_oportunidadtipo_casa"
                    android:textColor="@color/cr_azul_oscuro"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/card_titulo_riesgo"
                        android:textColor="@color/cr_gris_claro"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/txtNomOportunidadPerfilRiesgo2"
                        android:layout_width="120dp"
                        android:layout_height="25dp"
                        android:layout_marginLeft="10dp"
                        android:background="@color/cr_perfilriesgo_bajo"
                        android:gravity="center"
                        android:paddingHorizontal="20dp"
                        android:shadowRadius="50"
                        android:text="@string/cr_perfilriesgo_bajo"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_titulo_impganancia"
                    android:textColor="@color/cr_gris_claro"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txtFecVigenciaFin2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="S/. 2,000.00"
                    android:textColor="@color/cr_azul_oscuro"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtImpPrestamo2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="S/. 50,000.00"
                    android:textColor="@color/cr_azul_oscuro"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/card_titulo_plazo"
                        android:textColor="@color/cr_gris_claro"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/txtPctRatio2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="12"
                        android:textColor="@color/cr_azul_oscuro"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_titulo_rendimiento"
                    android:textColor="@color/cr_gris_claro"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txtImpTasacion2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1.67% / 20.00%"
                    android:textColor="@color/cr_azul_oscuro"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnRegresar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="5dp"
            android:background="@color/cr_azul_oscuro"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18dp"
            android:text="Regresar"/>

    </LinearLayout>

</FrameLayout>